# sem-fastapi-weather-api

./: main.py  pyproject.toml
